--- a/index.html
+++ b/index.html
@@ -104,11 +104,69 @@
                 </h2>
               </div>
               <div class="business-benefits__table">
-                <img
-                  src="./assets/img/table.png"
-                  alt="Comparison table showing laundry business advantages"
-                  class="business-benefits__table-img"
-                />
+                <table class="comparison-table">
+                    <thead>
+                      <tr>
+                        <th></th>
+                        <th>LAUNDRY</th>
+                        <th>FOOD</th>
+                        <th>GYM</th>
+                        <th>SALON</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="feature-cell">
+                          <div class="feature-title">Recession Proof Business</div>
+                          <div class="feature-description">Recession-proof demand for laundry services.</div>
+                        </td>
+                        <td><div class="toggle-icon checked" data-type="laundry"></div></td>
+                        <td><div class="toggle-icon checked" data-type="food"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="gym"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="salon"></div></td>
+                      </tr>
+                      <tr>
+                        <td class="feature-cell">
+                          <div class="feature-title">Industry-leading</div>
+                          <div class="feature-description">High Margin & Low Risk</div>
+                        </td>
+                        <td><div class="toggle-icon checked" data-type="laundry"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="food"></div></td>
+                        <td><div class="toggle-icon checked" data-type="gym"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="salon"></div></td>
+                      </tr>
+                      <tr>
+                        <td class="feature-cell">
+                          <div class="feature-title">Automation</div>
+                          <div class="feature-description">Less Dependency on Trained Staff</div>
+                        </td>
+                        <td><div class="toggle-icon checked" data-type="laundry"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="food"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="gym"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="salon"></div></td>
+                      </tr>
+                      <tr>
+                        <td class="feature-cell">
+                          <div class="feature-title">Multi-channel business</div>
+                          <div class="feature-description">Online to Offline Business</div>
+                        </td>
+                        <td><div class="toggle-icon checked" data-type="laundry"></div></td>
+                        <td><div class="toggle-icon checked" data-type="food"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="gym"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="salon"></div></td>
+                      </tr>
+                      <tr>
+                        <td class="feature-cell">
+                          <div class="feature-title">Inventory</div>
+                          <div class="feature-description">laundry business operates on a low-inventory model with minimal risk of losses</div>
+                        </td>
+                        <td><div class="toggle-icon checked" data-type="laundry"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="food"></div></td>
+                        <td><div class="toggle-icon checked" data-type="gym"></div></td>
+                        <td><div class="toggle-icon unchecked" data-type="salon"></div></td>
+                      </tr>
+                    </tbody>
+                  </table>
               </div>
             </div>
           </div>
