--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="hero-content">
             <div class="hero-text">
               <h1>
-                Be Part of India's <span>Leading Laundry</span> Revolution
+                Be Part of India's <span>Leading Laundry</span> <strong>Revolution</strong>
               </h1>
               <div class="hero-form">
                 <h3>Enter Your Details</h3>
